kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: python-app
  namespace: python-app
  labels:
    app: python-app

spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: python-app

  template:
    metadata:
      labels:
        app: python-app

    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: python-app

          image: alexdevops05/final-project:129fb92

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80

          startupProbe:
            httpGet:
              path: /healthz
              port: 80
            failureThreshold: 30
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"


              #
