kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: python-app-service
  namespace: python-app
  labels:
    app: python-app

spec:
  selector:
    app: python-app

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
